map image width changed to 100% relative to container to prevent from overflowing

--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ li {
 }
 
 .location img {
-
+    width: 100%;
 }
 
 footer {
